Wishlist items flex wrap bug fix. All items are being contained now in the screen, instead of going out of screen view.

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -2283,6 +2283,7 @@ a.rating-info span:first-child {
 .profile-main .wishlist-items {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 15px;
 }
